--- a/wazuhagent.yml
+++ b/wazuhagent.yml
@@ -23,7 +23,7 @@
           name: wazuh-agent
           update_cache: yes
           environment:
-            WAZUH_MANAGER: {{ wazuh_server }}
+            WAZUH_MANAGER: "{{ wazuh_server }}"
 
       - name: enable and start wazuh-agent
         ansible.builtin.systemd_service:
